database/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: fintech-db
spec:
  selector:
    matchLabels:
      app: database
  serviceName: database
  template:
    metadata:
      labels:
        app: database
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: database
        image: postgres:15
        ports:
        - containerPort: 5432
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: efs-storage
          mountPath: /var/lib/postgresql
        startupProbe:
          exec:
            command: ["sh", "-c", "pg_isready -h $HOSTNAME -U $POSTGRES_USER"]
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 5
        livenessProbe:
          exec:
            command: ["sh", "-c", "pg_isready -h $HOSTNAME -U $POSTGRES_USER"]
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          exec:
            command: ["sh", "-c", "pg_isready -U $POSTGRES_USER"]
          periodSeconds: 10
          failureThreshold: 3
      volumes:
      - name: efs-storage
        persistentVolumeClaim:
          claimName: database-pvc
