database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: fintech-db
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
